Update Notebook (Update Metrics)

--- a/Copia_di_prova2_progetto_appl_ml.ipynb
+++ b/Copia_di_prova2_progetto_appl_ml.ipynb
@@ -186,7 +186,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Processing Slices:   4%|▍         | 21/500 [00:12<04:12,  1.90it/s]"
+            "Processing Slices:  45%|████▌     | 226/500 [02:59<02:25,  1.89it/s]"
           ]
         }
       ]
@@ -603,13 +603,13 @@
         "    size_batch = 1000 // n_iter\n",
         "\n",
         "    for iter in range(n_iter):\n",
-        "      P_new = model.transform(incomplete_playlists[size_batch*iter:size_batch*(iter+1), :])\n",
+        "      input_matrix_iter = incomplete_playlists[n_iter*iter:n_iter*(iter+1), :]\n",
+        "      P_new = model.transform(input_matrix_iter)\n",
         "\n",
         "      # Predici la matrice ricostruita per le nuove playlist\n",
         "      predicted_matrix = np.dot(P_new, model.components_)\n",
         "\n",
         "      ground_truth_matrix_iter = correct_playlists[n_iter*iter:n_iter*(iter+1), :]\n",
-        "      input_matrix_iter = incomplete_playlists[n_iter*iter:n_iter*(iter+1), :]\n",
         "\n",
         "      cur_precision_at_10[iter] = precision_at_k(predicted_matrix, ground_truth_matrix_iter, input_matrix_iter, 10)\n",
         "      cur_precision_at_5[iter] = precision_at_k(predicted_matrix, ground_truth_matrix_iter, input_matrix_iter, 5)\n",
@@ -714,7 +714,8 @@
         "    size_batch = 1000 // n_iter\n",
         "\n",
         "    for iter in range(n_iter):\n",
-        "      P_new = model.transform(incomplete_playlists[size_batch*iter:size_batch*(iter+1), :])\n",
+        "      input_matrix_iter = incomplete_playlists[n_iter*iter:n_iter*(iter+1), :]\n",
+        "      P_new = model.transform(input_matrix_iter)\n",
         "\n",
         "      # Predici la matrice ricostruita per le nuove playlist\n",
         "      predicted_matrix = np.dot(P_new, model.components_)\n",
