fix errore di battitura

--- a/01Data_Analysis_MPD.ipynb
+++ b/01Data_Analysis_MPD.ipynb
@@ -450,7 +450,7 @@
         "    if i%30 == 0:\n",
         "        new_data = pd.DataFrame(data_list)\n",
         "        data_list.clear()\n",
-        "        million_df0 = pd.concat([million_df0, new_data], ignore_index=True)\n",
+        "        million_df = pd.concat([million_df, new_data], ignore_index=True)\n",
         "\n",
         "# concateniamo le righe residue che non sono entrate nell'ultimo if\n",
         "new_data = pd.DataFrame(data_list)\n",
