--- a/01Data_Analysis_MPD.ipynb
+++ b/01Data_Analysis_MPD.ipynb
@@ -429,7 +429,7 @@
         "\n",
         "            tracce = []\n",
         "            for track in playlist['tracks']:\n",
-        "                song = {field: track[field] for field in keep_t}\n",
+        "                song = {field: track[field] for field in keep_t[:-1]} # non metto track_uri perche ci metterò track_id\n",
         "                uri = track['track_uri'][14:] # per evitare la parte 'spotify:track:'\n",
         "\n",
         "                if uri not in tracks:\n",
