last edits to playlist generator project notebook

--- a/playlist_generator_project.ipynb
+++ b/playlist_generator_project.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -37,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "Rr8nGXQgGhiV"
@@ -67,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "7qxXTE6xGska",
         "cellView": "form"
@@ -106,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -133,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "FR37hoHaCKV5"
       },
@@ -145,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -209,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "tsqZZWeJ_5EL",
         "colab": {
@@ -330,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "qZWmzbQTJujP",
         "colab": {
@@ -454,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -517,12 +518,12 @@
       "metadata": {
         "id": "9dPSnrZZJSFU"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -582,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -621,7 +622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "picqHM6QietO"
       },
@@ -634,7 +635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -671,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -694,7 +695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -749,7 +750,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -788,7 +789,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "SqM7EPBTh1qR"
       },
@@ -811,7 +812,7 @@
         "id": "vM_9LyQGehVA",
         "outputId": "c8409aa2-aeb6-4a7f-8106-b5352c180e1c"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -837,7 +838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -860,7 +861,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -924,7 +925,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -972,7 +973,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1023,7 +1024,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1078,7 +1079,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "TWW_TB_ySr1U"
       },
@@ -1107,7 +1108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1143,7 +1144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1211,7 +1212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "X_DF2313G_f3"
@@ -1306,141 +1307,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "EApnpa-aLSX2",
         "cellView": "form"
       },
       "outputs": [],
       "source": [
-        "# @title evaluating functions definition\n",
-        "def evaluate_model_k_tracks_removed_df(model, k, num_valid_files=10):\n",
-        "  \"\"\"\n",
-        "  evaluate model processing a slice of playlists, 200 playlist at time to avoid\n",
-        "  colab cpu overflow\n",
-        "  \"\"\"\n",
-        "\n",
-        "  precision_at_10 = np.zeros(num_valid_files)\n",
-        "  precision_at_5 = np.zeros(num_valid_files)\n",
-        "  precision_at_2 = np.zeros(num_valid_files)\n",
-        "  precision_at_1 = np.zeros(num_valid_files)\n",
-        "\n",
-        "  recall_at_10 = np.zeros(num_valid_files)\n",
-        "  recall_at_5 = np.zeros(num_valid_files)\n",
-        "  recall_at_2 = np.zeros(num_valid_files)\n",
-        "  recall_at_1 = np.zeros(num_valid_files)\n",
-        "\n",
-        "  mrr = np.zeros(num_valid_files)\n",
-        "\n",
-        "  for file_idx, filename in enumerate(shuffled_slices[num_training_files:num_training_files+num_valid_files]):\n",
-        "    correct_playlists = np.zeros((1000, num_tracks))\n",
-        "    p_counter = -1\n",
-        "    if filename.startswith(\"mpd.slice.\") and filename.endswith(\".json\"):\n",
-        "      filepath = os.path.join(data, filename)\n",
-        "\n",
-        "      with open(filepath, \"r\", encoding=\"utf-8\") as jsonfile:\n",
-        "        cur_slice = json.load(jsonfile)\n",
-        "\n",
-        "      for playlist in cur_slice[\"playlists\"]:\n",
-        "        p_counter += 1\n",
-        "\n",
-        "        for track in playlist[\"tracks\"]:\n",
-        "          track_uri = track[\"track_uri\"][14:]\n",
-        "\n",
-        "          if track_uri in tracks:\n",
-        "            t_idx = track_uri_to_idx[track_uri]\n",
-        "\n",
-        "            correct_playlists[p_counter, t_idx] = 1\n",
-        "\n",
-        "\n",
-        "    incomplete_playlists = np.copy(correct_playlists)\n",
-        "\n",
-        "    # Turn exactly k ones to zeros per row\n",
-        "    for row in incomplete_playlists:\n",
-        "      # Get the indices of ones in the current row\n",
-        "      one_indices = np.where(row == 1)[0]\n",
-        "\n",
-        "      if len(one_indices) >= k:\n",
-        "        indices_to_zero = np.random.choice(one_indices, size=k, replace=False)\n",
-        "        row[indices_to_zero] = 0\n",
-        "\n",
-        "    # delete rows with less then k elements\n",
-        "    row_sums = np.sum(incomplete_playlists, axis=1)\n",
-        "    valid_rows = np.where(row_sums >= k)[0]  # Extract valid row indices\n",
-        "\n",
-        "    incomplete_playlists = incomplete_playlists[valid_rows,:]\n",
-        "    correct_playlists = correct_playlists[valid_rows,:]\n",
-        "\n",
-        "    n_iter = 5\n",
-        "\n",
-        "    cur_precision_at_10 = [0 for _ in range(n_iter)]\n",
-        "    cur_precision_at_5 = [0 for _ in range(n_iter)]\n",
-        "    cur_precision_at_2 = [0 for _ in range(n_iter)]\n",
-        "    cur_precision_at_1 = [0 for _ in range(n_iter)]\n",
-        "\n",
-        "    cur_recall_at_10 = [0 for _ in range(n_iter)]\n",
-        "    cur_recall_at_5 = [0 for _ in range(n_iter)]\n",
-        "    cur_recall_at_2 = [0 for _ in range(n_iter)]\n",
-        "    cur_recall_at_1 = [0 for _ in range(n_iter)]\n",
-        "\n",
-        "    cur_mrr = [0 for _ in range(n_iter)]\n",
-        "\n",
-        "    size_batch = correct_playlists.shape[0] // n_iter\n",
-        "\n",
-        "    for iter in range(n_iter):\n",
-        "      input_matrix_iter = incomplete_playlists[size_batch*iter:size_batch*(iter+1), :]\n",
-        "      P_new = model.transform(input_matrix_iter)\n",
-        "\n",
-        "      # Predici la matrice ricostruita per le nuove playlist\n",
-        "      predicted_matrix = np.dot(P_new, model.components_)\n",
-        "\n",
-        "      ground_truth_matrix_iter = correct_playlists[size_batch*iter:size_batch*(iter+1), :]\n",
-        "\n",
-        "      cur_precision_at_10[iter] = precision_at_k(predicted_matrix, ground_truth_matrix_iter, input_matrix_iter, 10)\n",
-        "      cur_precision_at_5[iter] = precision_at_k(predicted_matrix, ground_truth_matrix_iter, input_matrix_iter, 5)\n",
-        "      cur_precision_at_2[iter] = precision_at_k(predicted_matrix, ground_truth_matrix_iter, input_matrix_iter, 2)\n",
-        "      cur_precision_at_1[iter] = precision_at_k(predicted_matrix, ground_truth_matrix_iter, input_matrix_iter, 1)\n",
-        "\n",
-        "      cur_recall_at_10[iter] = recall_at_k(predicted_matrix, ground_truth_matrix_iter, input_matrix_iter, 10)\n",
-        "      cur_recall_at_5[iter] = recall_at_k(predicted_matrix, ground_truth_matrix_iter, input_matrix_iter, 5)\n",
-        "      cur_recall_at_2[iter] = recall_at_k(predicted_matrix, ground_truth_matrix_iter, input_matrix_iter, 2)\n",
-        "      cur_recall_at_1[iter] = recall_at_k(predicted_matrix, ground_truth_matrix_iter, input_matrix_iter, 1)\n",
-        "\n",
-        "      cur_mrr[iter] = mean_reciprocal_rank(predicted_matrix, ground_truth_matrix_iter, input_matrix_iter)\n",
-        "\n",
-        "    precision_at_10[file_idx] = np.mean(cur_precision_at_10)\n",
-        "    precision_at_5[file_idx] = np.mean(cur_precision_at_5)\n",
-        "    precision_at_2[file_idx] = np.mean(cur_precision_at_2)\n",
-        "    precision_at_1[file_idx] = np.mean(cur_precision_at_1)\n",
-        "    recall_at_10[file_idx] = np.mean(cur_recall_at_10)\n",
-        "    recall_at_5[file_idx] = np.mean(cur_recall_at_5)\n",
-        "    recall_at_2[file_idx] = np.mean(cur_recall_at_2)\n",
-        "    recall_at_1[file_idx] = np.mean(cur_recall_at_1)\n",
-        "    mrr[file_idx] = np.mean(cur_mrr)\n",
-        "\n",
-        "  p10 = np.mean(precision_at_10)\n",
-        "  p5 = np.mean(precision_at_5)\n",
-        "  p2 = np.mean(precision_at_2)\n",
-        "  p1 = np.mean(precision_at_1)\n",
-        "  r10 = np.mean(recall_at_10)\n",
-        "  r5 = np.mean(recall_at_5)\n",
-        "  r2 = np.mean(recall_at_2)\n",
-        "  r1 = np.mean(recall_at_1)\n",
-        "  mrr = np.mean(mrr)\n",
-        "\n",
-        "  print(\"  Precision@10 = \", p10)\n",
-        "  print(\"  Precision@5 = \", p5)\n",
-        "  print(\"  Precision@2 = \", p2)\n",
-        "  print(\"  Precision@1 = \", p1)\n",
-        "  print(\"  Recall@10 = \", r10)\n",
-        "  print(\"  Recall@5 = \", r5)\n",
-        "  print(\"  Recall@2 = \", r2)\n",
-        "  print(\"  Recall@1 = \", r1)\n",
-        "  print(\"  MRR = \", mrr)\n",
-        "\n",
-        "  return p10, p5, p2, p1, r10, r5, r2, r1, mrr\n",
-        "\n",
-        "\n",
+        "# @title evaluating function definition\n",
         "def evaluate_model_k_tracks_per_playlist(model, k, num_valid_files=10):\n",
         "  \"\"\"\n",
         "  evaluate model processing a slice of playlists, 200 playlist at time to avoid\n",
@@ -1608,7 +1482,7 @@
         },
         "outputId": "f353704a-a102-43db-bfec-0f157a8a82f3"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2051,6 +1925,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Sometimes the NMF model did not reach convergence and is not performing effectively. We chose not to increase the number of iterations to save memory and avoid potential runtime issues with Colab's limited RAM. Extending iterations could lead to excessive computational overhead without guaranteeing significant improvements."
+      ],
+      "metadata": {
+        "id": "HCJpuaDBYAtU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Evaluation"
       ],
       "metadata": {
@@ -2071,7 +1954,7 @@
         },
         "outputId": "44be9ff4-4fea-4a79-bd6a-37a2008b43de"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2277,7 +2160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "id": "TXin71eMIPvV"
       },
@@ -2308,7 +2191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "id": "_5zwJS1cKbrf"
       },
@@ -2321,7 +2204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "id": "-tqLNCcy0BD-"
       },
@@ -2359,7 +2242,7 @@
         },
         "outputId": "87e99a0d-b98b-4532-bedb-cdff689bde1a"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2780,6 +2663,12 @@
         "  - Required more components to achieve comparable performance\n",
         "  - Showed more sensitivity to the number of components\n",
         "\n",
+        "#### ⏳ Running Time Comparison: SVD vs NMF\n",
+        "- SVD is considerably faster than NMF, especially for large datasets.\n",
+        "- This is because the `scipy.sparse.linalg.svds` implementation of SVD is highly optimized for handling sparse matrices.\n",
+        "- In contrast, NMF does not leverage sparse matrix structures as efficiently as SVD and relies on iterative updates, which are computationally expensive, particularly for high-dimensional data.\n",
+        "- For example, on the same matrix, SVD with 600 components takes only 15 minutes, while NMF with 200 components takes almost an hour.\n",
+        "\n",
         "#### ⚙️ Optimal Parameters\n",
         "- **SVD**:\n",
         "  - Optimal performance at 300 components\n",
@@ -2791,7 +2680,7 @@
         "  - More computationally intensive than SVD\n",
         "\n",
         "#### 🎵 Playlist Length Impact\n",
-        "- **Optimal Known Tracks**: 8 tracks provided the best balance for recommendations\n",
+        "- **Optimal Known Tracks**: 8 tracks provided the best balance for recommendations. This is likely because there are enough tracks in the incomplete playlists to understand what comes next, while also leaving enough room for tracks that could fit into the playlist.\n",
         "- **Performance Pattern**:\n",
         "  - Improved steadily up to 8 tracks\n",
         "  - Peaked at 8-10 tracks\n",
@@ -2849,7 +2738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "id": "E4xFXiVIKbov"
       },
@@ -2913,7 +2802,7 @@
       "metadata": {
         "id": "0v9A8n2odC0M"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2927,7 +2816,7 @@
       "metadata": {
         "id": "6Sqp7CIxci6H"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2938,7 +2827,7 @@
       "metadata": {
         "id": "_neG-Q1Ucqx5"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2986,7 +2875,7 @@
       "metadata": {
         "id": "fGUSZDTgVqhS"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3023,7 +2912,7 @@
       "metadata": {
         "id": "CUrZTdSscTvk"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
